# github-workflow-test

./: .gitleaks.toml  .pre-commit-config.yaml  IMPROVEMENTS_REPORT.md  README.md  SCENARIO_2_PR_MERGE.md  SCENARIO_3_FEATURE.md  SESSION_HANDOVER.md  TEST_COMMIT_QUALITY.md  TEST_CONVENTIONAL_COMMITS.md  TEST_PROTECT_MASTER.md  TEST_SESSION_HANDOFF.md  VALIDATION_FINDINGS.md  check_issues.sh  config.yaml  edge_case_1.py  edge_case_2.py  invalid_yaml.yaml  mixed_line_endings.sh  no_final_newline.py  phase2-test.txt  phase3-test.txt  phase4-test.txt  phase5-medium-test.txt  phase5-test.txt  phase6-test.txt  phase7-test.txt  pyproject.toml  test-direct-push.txt  test-feature.sh  test-file.txt  test-no-config.txt  test-phase1-clean.txt  test-phase1.txt  test-phase2-fixup.txt  test-precommit-clean.txt  test-precommit-whitespace.txt  test-scenario3.txt  test-typo.txt  test.txt  test_clean.py  (+2 more)
.github/workflows/: issue-validation.yml  pr-title-test.yml  pr-validation.yml  push-validation.yml  python-test.yml  (+6 more)
ansible/: playbook.yml
docs/: TEST_ISSUE_AI_ATTRIBUTION.md  TEST_ISSUE_AI_ATTRIBUTION_RETEST.md  TEST_PRE_COMMIT_CHECK.md  TEST_PYTHON_TEST.md
scripts/: arrays-clean.sh  bad-backticks.sh  bad-cd.sh  bad-exitcode.sh  bad-multiple.sh  bad-unquoted.sh  bad-word-splitting.sh  complex-clean.sh  edge-combined-violations.sh  edge-long-line.sh  edge-shellcheck-disable.sh  edge-unicode.sh  fmt-brace-style.sh  fmt-no-case-indent.sh  fmt-no-space-redirect.sh  fmt-tabs.sh  fmt-wrong-indent.sh  functions-clean.sh  simple-clean.sh
terraform/: main.tf
tests/: test_calculator.py
(+2 files in other folders)
